[f] 104 - Fix search/remove search icon position on mobile screen
https://www.pivotaltracker.com/story/show/106476104

--- a/common/static/sass/style.sass
+++ b/common/static/sass/style.sass
@@ -235,10 +235,14 @@ body
         margin-top: 2px
         border: none
         width: 100%
-        text-align: right
+        position: relative
 
         input
           width: 89%
+
+        i
+          position: absolute
+          right: 0
 
 h1
   @extend .extend_1
